--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,7 +26,7 @@ classifiers = [
     "Topic :: Scientific/Engineering :: Physics",
     "Topic :: Scientific/Engineering :: Visualization",
 ]
-requires-python = ">=3.8"
+requires-python = ">=3.9"
 dependencies = ["numpy>=2.0.0", "scipy"]
 dynamic = ["version"]
 
@@ -76,3 +76,11 @@ ErwinJr2 = ["Info.plist"]
 
 [tool.setuptools.dynamic]
 version = { attr = "ErwinJr2.versionAndName.VERSION" }
+
+[tool.cibuildwheel]
+skip = [
+    # Skip 32-bit builds
+    "*-win32", "*linux_i686",
+    # Disable building PyPy wheels on all platforms
+    "pp*",
+]
