--- a/.github/workflows/build-wheel.yml
+++ b/.github/workflows/build-wheel.yml
@@ -10,9 +10,9 @@ jobs:
       matrix:
         os:
           - ubuntu-latest
-          # - windows-latest
-          # - macos-13
-          # - macos-14
+          - windows-latest
+          - macos-13
+          - macos-14
 
     steps:
       - uses: actions/checkout@v4
@@ -26,7 +26,7 @@ jobs:
       - name: Build wheels
         run: python -m cibuildwheel --output-dir dist
         env:
-          CIBW_BUILD:  "cp39*"
+          CIBW_BUILD:  "cp39* cp310* cp311* cp312*"
 
       - uses: actions/upload-artifact@v4
         with:
@@ -47,7 +47,9 @@ jobs:
 
   upload_all:
     needs: [build_wheels, make_sdist]
-    environment: pypi
+    environment:
+      name: pypi
+      url: https://pypi.org/p/ErwinJr2
     permissions:
       id-token: write
     runs-on: ubuntu-latest
@@ -64,7 +66,9 @@ jobs:
 
   upload_all-dev:
     needs: [build_wheels, make_sdist]
-    environment: pypi
+    environment:
+      name: pypi-test
+      url: https://test.pypi.org/p/ErwinJr2
     permissions:
       id-token: write
     runs-on: ubuntu-latest
