--- a/.github/workflows/build-wheel.yml
+++ b/.github/workflows/build-wheel.yml
@@ -77,7 +77,9 @@ jobs:
     permissions:
       id-token: write
     runs-on: ubuntu-latest
-    if: github.event_name == 'workflow_dispatch'
+    # if: github.event_name == 'workflow_dispatch'
+    # This is for dev testing when this change is not merged yet
+    if: github.event_name == 'push' && startsWith(github.ref, 'refs/heads/dev')
     steps:
       - uses: actions/download-artifact@v4
         with:
@@ -89,3 +91,4 @@ jobs:
         with:
           repository-url: https://test.pypi.org/legacy/
           skip-existing: true
+          verbose: true
