Use pypa/cibuildwheel@v2.20.0

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -84,3 +84,5 @@ skip = [
     # Disable building PyPy wheels on all platforms
     "pp*",
 ]
+# test-requires = "pytest"
+# test-command = "pytest {project}/tests"
