--- a/.github/workflows/build-wheel.yml
+++ b/.github/workflows/build-wheel.yml
@@ -21,18 +21,12 @@ jobs:
 
     steps:
       - uses: actions/checkout@v4
-
-      # Used to host cibuildwheel
-      - uses: actions/setup-python@v5
-
-      - name: Install cibuildwheel
-        run: python -m pip install cibuildwheel==2.20.0
-
       - name: Build wheels
-        run: python -m cibuildwheel --output-dir dist
+        uses: pypa/cibuildwheel@v2.20.0
         env:
           CIBW_BUILD:  "cp39* cp310* cp311* cp312*"
-
+        with:
+          output-dir: dist
       - uses: actions/upload-artifact@v4
         with:
           name: cibw-wheels-${{ matrix.os }}-${{ strategy.job-index }}
@@ -66,7 +60,6 @@ jobs:
           pattern: cibw-*
           path: dist
           merge-multiple: true
-
       - uses: pypa/gh-action-pypi-publish@release/v1
 
   upload_all-dev:
@@ -86,7 +79,6 @@ jobs:
           pattern: cibw-*
           path: dist
           merge-multiple: true
-
       - uses: pypa/gh-action-pypi-publish@release/v1
         with:
           repository-url: https://test.pypi.org/legacy/
