--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -2,8 +2,12 @@ version: 2
 sphinx:
     configuration: docs/conf.py
 
+build:
+  os: ubuntu-22.04
+  tools:
+    python: "3.12"
+
 python:
-    version: 3.7
-    install:
-        - requirements: docs/requirements.txt
-        - requirements: requirements.txt
+  install:
+    - requirements: docs/requirements.txt
+    - requirements: requirements.txt
