--- a/pyproject.toml
+++ b/pyproject.toml
@@ -84,5 +84,5 @@ skip = [
     # Disable building PyPy wheels on all platforms
     "pp*",
 ]
-# test-requires = "pytest"
-# test-command = "pytest {project}/tests"
+test-requires = "pytest"
+test-command = "cd {project} && pytest tests"
