rename for google style guide part 1: camel to underscore

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -21,3 +21,16 @@ repos:
     rev: "7.1.1"
     hooks:
       - id: flake8
+  # - repo: local
+  #   hooks:
+  #   - id: pylint
+  #     name: pylint
+  #     entry: pylint
+  #     language: system
+  #     types: [python]
+  #     require_serial: true
+  #     args:
+  #       [
+  #         "-rn", # Only display messages
+  #         # "-sn", # Don't display the score
+  #       ]
