--- a/.pylintrc
+++ b/.pylintrc
@@ -123,6 +123,7 @@ disable=R,
         unicode-builtin,
         unnecessary-pass,
         unpacking-in-except,
+        unspecified-encoding,
         useless-else-on-loop,
         useless-suppression,
         using-cmp-argument,
