--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -39,4 +39,4 @@ jobs:
     - name: Test with pytest
       run: |
         pip install -e .
-        pytest -v --doctest-modules --junitxml=junit/test-results.xml --cov=com --cov-report=xml --cov-report=html tests
+        pytest -v --doctest-modules --junitxml=junit/test-results.xml --cov-report=xml --cov-report=html tests
