--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -34,9 +34,19 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements-dev.txt
-    - name: Test with flake8
-      run: flake8 ErwinJr2/ --count --show-source --statistics
     - name: Test with pytest
       run: |
         pip install -e .
         pytest -v --doctest-modules --junitxml=junit/test-results.xml --cov-report=xml --cov-report=html tests
+  pre-commit:
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v3
+    - uses: actions/setup-python@v5.2.0
+      with:
+        python-version: "3.12"
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install -r requirements-dev.txt
+    - uses: pre-commit/action@v3.0.1
