--- a/.github/workflows/build-wheel.yml
+++ b/.github/workflows/build-wheel.yml
@@ -26,7 +26,7 @@ jobs:
       - name: Build wheels
         uses: pypa/cibuildwheel@v2.20.0
         env:
-          CIBW_BUILD:  "cp39* cp310* cp311* cp312*"
+          CIBW_BUILD:  "cp39* cp310* cp311* cp312* cp313*"
         with:
           output-dir: dist
       - uses: actions/upload-artifact@v4
